--- a/data.yaml
+++ b/data.yaml
@@ -1806,6 +1806,8 @@ library:
     gcc:
     - since: C++17
       value: 201611
+    - since: C++20
+      value: 201907
     msvc:
     - value: 201510
     - since: C++17
