--- a/data.yaml
+++ b/data.yaml
@@ -1636,7 +1636,10 @@ library:
       value: 201907
     gcc:
     - since: C++20
-      depends: defined(_GLIBCXX_HAS_GTHREADS) || defined(_GLIBCXX_HAVE_LINUX_FUTEX)
+      depends: '!defined(_GLIBCXX_HAS_GTHREADS) && defined(_GLIBCXX_HAVE_LINUX_FUTEX)'
+      value: 201907
+    - since: C++20
+      depends: defined(_GLIBCXX_HAS_GTHREADS)
       value: 201907
     msvc:
     - since: C++20
@@ -1658,7 +1661,7 @@ library:
       value: 201907
     gcc:
     - since: C++20
-      depends: __cpp_lib_atomic_wait && __cpp_aligned_new
+      depends: __cpp_aligned_new && __cpp_lib_atomic_wait
       value: 201907
     msvc:
     - since: C++20
@@ -1695,6 +1698,8 @@ library:
     clang:
     - since: C++20
       value: 201907
+    - since: C++26
+      value: 202306
     gcc:
     - since: C++20
       value: 201907
@@ -1836,7 +1841,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: defined(__cpp_char8_t)
+      depends: '!defined(_LIBCPP_HAS_NO_CHAR8_T)'
       value: 201907
     gcc:
     - depends: defined(__cpp_char8_t)
@@ -1980,7 +1985,7 @@ library:
       value: 202002
     gcc:
     - since: C++20
-      depends: __cpp_concepts
+      depends: __cpp_concepts >= 201907L
       value: 202002
     msvc:
     - since: C++20
@@ -2188,14 +2193,13 @@ library:
       value: 201907
     gcc:
     - since: C++17
-      depends: __has_builtin(__builtin_is_constant_evaluated) || !__is_identifier(__builtin_is_constant_evaluated)
+      depends: _GLIBCXX_HAVE_IS_CONSTANT_EVALUATED
       value: 201611
     - since: C++20
-      depends: __has_builtin(__builtin_is_constant_evaluated) || !__is_identifier(__builtin_is_constant_evaluated)
+      depends: '!_GLIBCXX_USE_CXX11_ABI && defined(__cpp_lib_is_constant_evaluated)'
       value: 201811
     - since: C++20
-      depends: (__has_builtin(__builtin_is_constant_evaluated) || !__is_identifier(__builtin_is_constant_evaluated))
-        && _GLIBCXX_USE_CXX11_ABI
+      depends: _GLIBCXX_USE_CXX11_ABI && defined(__cpp_lib_is_constant_evaluated)
       value: 201907
     msvc:
     - since: C++20
@@ -2345,7 +2349,7 @@ library:
     clang:
     - since: C++20
       depends: defined(__cpp_impl_destroying_delete) && __cpp_impl_destroying_delete
-        >= 201806
+        >= 201806L
       value: 201806
     gcc:
     - since: C++20
@@ -2452,7 +2456,7 @@ library:
       value: 202211
     gcc:
     - since: C++23
-      depends: __cpp_concepts >= 202002
+      depends: __cpp_concepts >= 202002L
       value: 202211
     msvc:
     - since: C++23
@@ -2547,7 +2551,6 @@ library:
   support:
     clang:
     - since: C++23
-      depends: '!defined(_LIBCPP_HAS_NO_INCOMPLETE_FORMAT)'
       value: 202207
     gcc: null
     msvc: null
@@ -2587,7 +2590,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_charconv
   header_list: charconv
   rows:
@@ -2597,7 +2601,9 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++17
+      value: 202306
 - name: __cpp_lib_freestanding_cstdlib
   header_list: cmath cstdlib
   rows:
@@ -2607,7 +2613,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_cstring
   header_list: cstring
   rows:
@@ -2617,7 +2624,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_cwchar
   header_list: cwchar
   rows:
@@ -2627,7 +2635,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_errc
   header_list: cerrno system_error
   rows:
@@ -2637,7 +2646,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_feature_test_macros
   rows:
   - value: 202306
@@ -2646,7 +2656,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_functional
   header_list: functional
   rows:
@@ -2656,7 +2667,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_iterator
   header_list: iterator
   rows:
@@ -2666,7 +2678,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_memory
   header_list: memory
   rows:
@@ -2676,7 +2689,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_operator_new
   header_list: new
   rows:
@@ -2687,7 +2701,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_ranges
   header_list: ranges
   rows:
@@ -2697,7 +2712,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++20
+      depends: defined(__cpp_lib_concepts)
+      value: 202306
 - name: __cpp_lib_freestanding_ratio
   header_list: ratio
   rows:
@@ -2707,7 +2725,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_tuple
   header_list: tuple
   rows:
@@ -2717,7 +2736,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_freestanding_utility
   header_list: utility
   rows:
@@ -2727,7 +2747,8 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - value: 202306
 - name: __cpp_lib_fstream_native_handle
   header_list: fstream
   rows:
@@ -2847,7 +2868,7 @@ library:
       value: 201606
     gcc:
     - since: C++17
-      depends: __has_builtin(__has_unique_object_representations) || !__is_identifier(__has_unique_object_representations)
+      depends: defined(_GLIBCXX_HAVE_BUILTIN_HAS_UNIQ_OBJ_REP)
       value: 201606
     msvc:
     - since: C++17
@@ -3036,7 +3057,7 @@ library:
       value: 201703
     gcc:
     - since: C++17
-      depends: __has_builtin(__is_aggregate) || !__is_identifier(__is_aggregate)
+      depends: defined(_GLIBCXX_HAVE_BUILTIN_IS_AGGREGATE)
       value: 201703
     msvc:
     - since: C++17
@@ -3053,7 +3074,7 @@ library:
       value: 201811
     gcc:
     - since: C++20
-      depends: __has_builtin(__builtin_is_constant_evaluated) || !__is_identifier(__builtin_is_constant_evaluated)
+      depends: defined(_GLIBCXX_HAVE_IS_CONSTANT_EVALUATED)
       value: 201811
     msvc:
     - since: C++20
@@ -3255,7 +3276,7 @@ library:
       value: 201606
     gcc:
     - since: C++17
-      depends: __has_builtin(__builtin_launder) || !__is_identifier(__builtin_launder)
+      depends: defined(_GLIBCXX_HAVE_BUILTIN_LAUNDER)
       value: 201606
     msvc:
     - since: C++17
@@ -3409,11 +3430,11 @@ library:
       value: 201603
     gcc:
     - since: C++17
-      depends: defined(_GLIBCXX_HAS_GTHREADS)
-      value: 201603
-    - since: C++17
       depends: '!defined(_GLIBCXX_HAS_GTHREADS)'
       value: 1
+    - since: C++17
+      depends: defined(_GLIBCXX_HAS_GTHREADS)
+      value: 201603
     msvc:
     - since: C++17
       value: 201603
@@ -3536,6 +3557,7 @@ library:
       value: 201304
     gcc:
     - since: C++14
+      depends: '!defined(_GLIBCXX_DEBUG)'
       value: 201304
     msvc:
     - value: 201304
@@ -3970,8 +3992,12 @@ library:
     papers: P2734R0
     cppreference-description: Adding the new 2022 SI prefixes
   support:
-    clang: null
-    gcc: null
+    clang:
+    - since: C++26
+      value: 202306
+    gcc:
+    - since: C++26
+      value: 202306
     msvc: null
 - name: __cpp_lib_raw_memory_algorithms
   header_list: memory
@@ -4244,7 +4270,8 @@ library:
   support:
     clang:
     - since: C++20
-      depends: __has_builtin(__builtin_source_location)
+      depends: __has_builtin(__builtin_source_location) && !(defined(_LIBCPP_APPLE_CLANG_VER)
+        && _LIBCPP_APPLE_CLANG_VER <= 1403)
       value: 201907
     gcc:
     - since: C++20
@@ -4497,7 +4524,7 @@ library:
     clang: null
     gcc:
     - since: C++20
-      depends: __cpp_impl_three_way_comparison >= 201907 && __cpp_lib_concepts
+      depends: __cpp_impl_three_way_comparison >= 201907L && __cpp_lib_concepts
       value: 201907
     msvc:
     - since: C++20
@@ -4531,6 +4558,7 @@ library:
       value: 201907
     gcc:
     - since: C++20
+      depends: __cpp_generic_lambdas >= 201707L
       value: 201907
     msvc:
     - since: C++20
@@ -4564,7 +4592,10 @@ library:
     cppreference-description: Redefining {{lc|std::to_string}} in terms of {{lc|std::format}}
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      depends: __cpp_lib_to_chars
+      value: 202306
     msvc: null
 - name: __cpp_lib_to_underlying
   header_list: utility
