--- a/data.yaml
+++ b/data.yaml
@@ -225,7 +225,9 @@ language:
       }}]]'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202110
     msvc: null
 - name: __cpp_binary_literals
   rows:
@@ -413,6 +415,8 @@ language:
       value: 202002
     - since: C++23
       value: 202211
+    - since: C++26
+      value: 202306
     msvc:
     - value: 201304
     - since: C++17
