--- a/data.yaml
+++ b/data.yaml
@@ -2573,7 +2573,9 @@ library:
     cppreference-description: Formatting {{lc|std::thread::id}} and {{ltt|cpp/utility/basic_stacktrace|std::stacktrace}}
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202302
     msvc:
     - since: C++23
       depends: defined(__cpp_lib_concepts)
