libstdc++ defines __cpp_lib_forward_like

--- a/data.yaml
+++ b/data.yaml
@@ -2590,7 +2590,9 @@ library:
     clang:
     - since: C++23
       value: 202207
-    gcc: null
+    gcc:
+    - since: C++23
+      value: 202207
     msvc:
     - since: C++23
       value: 202207
