--- a/data.yaml
+++ b/data.yaml
@@ -1156,6 +1156,8 @@ language:
       value: 200410
     - since: C++17
       value: 201411
+    - since: C++26
+      value: 202306
     msvc:
     - value: 200410
     - since: C++17
