--- a/data.yaml
+++ b/data.yaml
@@ -1000,7 +1000,9 @@ language:
   support:
     clang:
     - value: 202306
-    gcc: null
+    gcc:
+    - since: C++26
+      value: 202306
     msvc: null
 - name: __cpp_range_based_for
   rows:
