--- a/data.yaml
+++ b/data.yaml
@@ -2599,7 +2599,10 @@ library:
   support:
     clang: null
     gcc: null
-    msvc: null
+    msvc:
+    - since: C++20
+      depends: defined(__cpp_lib_concepts)
+      value: 202311
 - name: __cpp_lib_formatters
   header_list: stacktrace thread
   rows:
