--- a/data.yaml
+++ b/data.yaml
@@ -2600,7 +2600,9 @@ library:
     clang:
     - since: C++20
       value: 202311
-    gcc: null
+    gcc:
+    - since: C++20
+      value: 202311
     msvc:
     - since: C++20
       depends: defined(__cpp_lib_concepts)
