--- a/data.yaml
+++ b/data.yaml
@@ -4747,7 +4747,10 @@ library:
     cppreference-description: '{{lc|std::text_encoding}}'
   support:
     clang: null
-    gcc: null
+    gcc:
+    - since: C++26
+      depends: _GLIBCXX_USE_NL_LANGINFO_L
+      value: 202306
     msvc: null
 - name: __cpp_lib_three_way_comparison
   header_list: compare
