--- a/data.yaml
+++ b/data.yaml
@@ -4321,7 +4321,9 @@ library:
     cppreference-description: '[[cpp/numeric#Saturation arithmetic (since C++26)|Saturation
       arithmetic]]'
   support:
-    clang: null
+    clang:
+    - since: C++26
+      value: 202311
     gcc:
     - since: C++26
       value: 202311
