--- a/data.yaml
+++ b/data.yaml
@@ -1658,7 +1658,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: '!defined(_LIBCPP_AVAILABILITY_HAS_NO_SYNC)'
+      depends: _LIBCPP_AVAILABILITY_HAS_SYNC
       value: 201907
     gcc:
     - since: C++20
@@ -1683,7 +1683,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && !defined(_LIBCPP_AVAILABILITY_HAS_NO_SYNC)'
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && _LIBCPP_AVAILABILITY_HAS_SYNC'
       value: 201907
     gcc:
     - since: C++20
@@ -2516,7 +2516,7 @@ library:
   support:
     clang:
     - since: C++17
-      depends: '!defined(_LIBCPP_AVAILABILITY_HAS_NO_FILESYSTEM_LIBRARY)'
+      depends: '!defined(_LIBCPP_HAS_NO_FILESYSTEM) && _LIBCPP_AVAILABILITY_HAS_FILESYSTEM_LIBRARY'
       value: 201703
     gcc:
     - since: C++17
@@ -2923,6 +2923,7 @@ library:
   support:
     clang:
     - since: C++26
+      depends: '!defined(_LIBCPP_HAS_NO_FILESYSTEM) && !defined(_LIBCPP_HAS_NO_LOCALIZATION)'
       value: 202306
     gcc:
     - since: C++26
@@ -3414,7 +3415,7 @@ library:
     clang:
     - since: C++20
       depends: '!defined(_LIBCPP_HAS_NO_THREADS) && !defined(_LIBCPP_HAS_NO_EXPERIMENTAL_STOP_TOKEN)
-        && !defined(_LIBCPP_AVAILABILITY_HAS_NO_SYNC)'
+        && _LIBCPP_AVAILABILITY_HAS_SYNC'
       value: 201911
     gcc:
     - since: C++20
@@ -3432,7 +3433,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && !defined(_LIBCPP_AVAILABILITY_HAS_NO_SYNC)'
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && _LIBCPP_AVAILABILITY_HAS_SYNC'
       value: 201907
     gcc:
     - since: C++20
@@ -3620,7 +3621,7 @@ library:
   support:
     clang:
     - since: C++17
-      depends: '!defined(_LIBCPP_AVAILABILITY_HAS_NO_PMR)'
+      depends: _LIBCPP_AVAILABILITY_HAS_PMR
       value: 201603
     gcc:
     - since: C++17
@@ -3835,7 +3836,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: '!defined(_LIBCPP_AVAILABILITY_HAS_NO_PMR)'
+      depends: _LIBCPP_AVAILABILITY_HAS_PMR
       value: 201902
     gcc:
     - since: C++20
@@ -3869,6 +3870,7 @@ library:
   support:
     clang:
     - since: C++14
+      depends: '!defined(_LIBCPP_HAS_NO_LOCALIZATION)'
       value: 201304
     gcc:
     - since: C++14
@@ -4337,6 +4339,7 @@ library:
   support:
     clang:
     - since: C++17
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS)'
       value: 201703
     gcc:
     - since: C++17
@@ -4355,7 +4358,7 @@ library:
   support:
     clang:
     - since: C++20
-      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && !defined(_LIBCPP_AVAILABILITY_HAS_NO_SYNC)'
+      depends: '!defined(_LIBCPP_HAS_NO_THREADS) && _LIBCPP_AVAILABILITY_HAS_SYNC'
       value: 201907
     gcc:
     - since: C++20
@@ -4495,8 +4498,6 @@ library:
   support:
     clang:
     - since: C++20
-      depends: __has_builtin(__builtin_source_location) && !(defined(_LIBCPP_APPLE_CLANG_VER)
-        && _LIBCPP_APPLE_CLANG_VER <= 1403)
       value: 201907
     gcc:
     - since: C++20
